# Pacesoft

./: build.gradle  gradle.properties  settings.gradle
Include/: SkbDukpt.h  SkbGieseckeDevrient.h  SkbInternalHelpers.h  (+1 more)
pacesoftsdk/: CMakeLists.txt  build.gradle
pacesoftsdk/src/amadis/java/com/pacesoft/sdk/agnos/: CardListner.kt  Sred.kt  Transaction.kt
pacesoftsdk/src/amadis/java/com/pacesoft/sdk/session/: XpssInsta.kt
pacesoftsdk/src/ingenico/java/com/pacesoft/sdk/ingenico/: IngenicoDeviceConfig.kt  IngenicoSDK.kt  IngenicoSDKCB.kt
pacesoftsdk/src/ingenico/java/com/pacesoft/sdk/ingenico/entity/: CardOption.java  EMVOption.java
pacesoftsdk/src/ingenico/java/com/pacesoft/sdk/ingenico/utility/: BytesUtil.java  DialogUtil.java  EMVInfoUtil.java  LogUtil.java  SearchListenerAdapter.java  TLV.java  TLVList.java
pacesoftsdk/src/ingenico/java/com/pacesoft/sdk/session/: XpssInsta.kt
pacesoftsdk/src/ingenico/libs/: nar-secure-device-service-api-1.2.7-0178.aar  nar-secure-device-service-client-1.2.7-0178.aar
pacesoftsdk/src/ingenico/res/layout/: select_dialog_item.xml  select_dialog_view.xml
pacesoftsdk/src/main/: AndroidManifest.xml
pacesoftsdk/src/main/cpp/: SkbTamperCallbacks.h  kmlwrapper.h  native-lib.cpp
pacesoftsdk/src/main/cpp/km_l2/: aes_p.c  km_l2.c  km_l2.h  pkcs7_padding.c  pkcs7_padding.h  pkcs7_padding.hpp
pacesoftsdk/src/main/cpp/km_l2/b64/: b64.c  b64.h
pacesoftsdk/src/main/cpp/km_l2/http-response-parser/: httpresponseparser.c  httpresponseparser.h
pacesoftsdk/src/main/cpp/km_l2/json-parser/: cJSON.h
pacesoftsdk/src/main/java/com/pacesoft/sdk/agnos/: AgnosPayCallbacks.kt  AgnosPaySDK.kt  Config.kt  Outcome.kt
pacesoftsdk/src/main/java/com/pacesoft/sdk/app/: PaceSoftCallback.kt  PaceSoftSdk.kt  XZDefend.kt
pacesoftsdk/src/main/java/com/pacesoft/sdk/base/: SKBException.kt
pacesoftsdk/src/main/java/com/pacesoft/sdk/module/: BasePsApiRspBody.kt  CryptoPayload.kt  Cryptos.kt  PsApiReq.kt  PsApiRsp.kt  SecurityHelperResult.kt  XApiRequest.kt
pacesoftsdk/src/main/java/com/pacesoft/sdk/network/api/: AppConstant.kt  XApi.kt  XUrl.kt
pacesoftsdk/src/main/java/com/pacesoft/sdk/network/heartbeat/: DeviceHeartbeatService.kt  HeartBeatServiceCallback.kt  IntentAction.kt  XBootReceiver.kt  XHeartBeatNotification.kt  XHeartbeatApi.kt  XHeartbeatService.kt
pacesoftsdk/src/main/java/com/pacesoft/sdk/network/repo/: AuthApiRepo.kt  BaseApiRepo.kt  HeartbeatApiRepo.kt  UserMerchantApiRepo.kt
pacesoftsdk/src/main/java/com/pacesoft/sdk/network/repo/pojo/: BaseApiResponse.kt  PublicIPAddress.kt
pacesoftsdk/src/main/java/com/pacesoft/sdk/network/repo/pojo/heartbeat/: DeviceHeartbeatReq.kt  HeartbeatRequest.kt  HeartbeatResponse.kt  HeartbeatRsp.kt  UserHeartbeatReq.kt  UserHeartbeatRsp.kt
pacesoftsdk/src/main/java/com/pacesoft/sdk/network/repo/pojo/user/: XUser.kt
pacesoftsdk/src/main/java/com/pacesoft/sdk/network/repo/service/: ApiInterface.kt
pacesoftsdk/src/main/java/com/pacesoft/sdk/network/util/: AppServerException.kt  BadNetworkConnectivityCallback.kt  UserSessionExpirableCallback.kt
pacesoftsdk/src/main/java/com/pacesoft/sdk/session/: DevicePref.kt  KeyPref.kt  UserPref.kt  Xskb.kt
pacesoftsdk/src/main/java/com/pacesoft/sdk/ui/zDefend/: TemperedActivity.kt
pacesoftsdk/src/main/java/com/pacesoft/sdk/util/: XPConst.kt
pacesoftsdk/src/main/java/com/pacesoft/sdk/util/bank/: XCardEnum.kt
pacesoftsdk/src/main/java/com/pacesoft/sdk/util/device/: XPDevice.kt
pacesoftsdk/src/main/java/com/pacesoft/sdk/util/text/: XCrypto.kt
pacesoftsdk/src/main/java/com/pacesoft/sdk/util/utility/: Utils.kt
pacesoftsdk/src/main/java/com/pacesoft/sdk/vm/: AuthVm.kt  BaseUserVm.kt  BaseVm.kt  HeartbeatVm.kt
pacesoftsdk/src/main/java/com/pacesoft/sdk/vm/user/merchant/profile/: MProfileVm.kt
pacesoftsdk/src/main/java/com/pacesoft/sdk/vm/user/merchant/report/: MReportVm.kt
pacesoftsdk/src/main/java/com/pacesoft/sdk/vm/user/merchant/terminal/: MTerminalVm.kt
pacesoftsdk/src/main/java/x/code/session/: _BasePref.kt
pacesoftsdk/src/main/java/x/code/util/: XBuild.kt  XConst.kt  XConvertObj.kt
pacesoftsdk/src/main/java/x/code/util/device/: XAppSignatureHashHelper.kt  XDevice.kt
pacesoftsdk/src/main/java/x/code/util/listener/: OnLoadMoreListener.kt  OnOneOffClickListener.kt  OnSingleClickListener.kt
pacesoftsdk/src/main/java/x/code/util/net/: XNetConnStatus.kt
pacesoftsdk/src/main/java/x/code/util/number/: Numb.kt
pacesoftsdk/src/main/java/x/code/util/pojo/: BaseResponse.kt  SecurityHelperResult.kt
pacesoftsdk/src/main/java/x/code/util/repo/: Resource.kt
pacesoftsdk/src/main/java/x/code/util/view/text/: XStr.kt
pacesoftsdk/src/main/res/drawable/: rect_c6_divider_color_stroke.xml  rect_c6_red_500_stroke.xml
pacesoftsdk/src/main/res/layout/: activity_tempered.xml
pacesoftsdk/src/main/res/values/: strings.xml
(+47 files in other folders)
